--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,27 @@
 <html>
   <head>
     <title>Prismarine Viewer</title>
+    <style type="text/css">
+      html {
+        overflow: hidden;
+      }
+
+      html, body {
+        height: 100%;
+
+        margin: 0;
+        padding: 0;
+      }
+
+      canvas {
+        height: 100%;
+        width: 100%;
+        font-size: 0;
+
+        margin: 0;
+        padding: 0;
+      }
+    </style>
   </head>
   <body>
     <script type="text/javascript" src="index.js"></script>
