examples/electron: working world loading

--- a/examples/electron/client/index.html
+++ b/examples/electron/client/index.html
@@ -12,9 +12,18 @@
     <div class='header'>Prismarine Viewer</div>
 
     <div>
-      <div>Drag a folder to the window or <a href='' onclick='connect()'>connect to mineflayer</a></div>
+      <div>Drag a folder to the window to open, 
+        <a href='' onclick='connect()'>connect to mineflayer</a>, 
+        or <a href='' onclick="startmf()">start mineflayer</a></div>
     </div>
 
+  </div>
+
+  <div id="multiviewer" style="display: none;">
+    <span class='v' id="v-1"><p>Connecting</p></span>
+    <span class='v' id="v-2"><p>Connecting</p></span>
+    <span class='v' id="v-3"><p>Connecting</p></span>
+    <span class='v' id="v-4"><p>Connecting</p></span>
   </div>
 
   <script type="text/javascript" src="stats.js" type="module"></script>
